<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.the.war.of.thewarofstars.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.the.war.of.thewarofstars.ui.dashboard.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.the.war.of.thewarofstars.ui.notifications.NotificationsFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_notifications" />
</navigation>