<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <!--        <variable-->
        <!--            name=""-->
        <!--            type="" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/border_pay_dialog"
        >

        <ImageView
            android:id="@+id/iv_guide"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/dialog_pay_process_guide"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_guide"
            />
        <TextView
            android:id="@+id/tv_guide_to_gamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_pay_process_guide_to_gamer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_guide"
            />
        <TextView
            android:id="@+id/tv_guide_to_amatuer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_pay_process_guide_to_amature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_guide_to_gamer"
            />

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="32dp"
            android:text="@string/dialog_pay_process_notice"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_guide_to_amatuer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:id="@+id/layout_notice_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_notice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/tv_notice_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginBottom="32dp"
                android:text="@string/dialog_pay_process_notice_ok"
                android:padding="10dp"
                />

            <CheckBox
                android:id="@+id/cb_notice_ok"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@color/light_transparent"
                android:background="@drawable/background_check_on_off"
                />
        </LinearLayout>

        <View
            android:id="@+id/v_question_devider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0"
            app:layout_constraintTop_toBottomOf="@+id/layout_notice_ok"
            />

        <LinearLayout
            android:id="@+id/layout_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toBottomOf="@+id/v_question_devider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >


            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="확인"
                android:textColor="#ff6a1a"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
