<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:theWarsOfStar="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <!--        <variable-->
        <!--            name=""-->
        <!--            type="" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/border_convert_dialog">

        <TextView
            android:id="@+id/tv_available_point_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_convert_available_point"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_available_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500,000P"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/main_orange_color"
            app:layout_constraintTop_toBottomOf="@id/tv_available_point_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/tv_convert_point_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_convert_point"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_available_point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main_orange_color"
            android:inputType="number"
            android:textStyle="bold"
            android:maxLength="8"
            android:backgroundTint="@color/main_orange_color"
            app:layout_constraintTop_toBottomOf="@id/tv_convert_point_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_cash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_convert_cash"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/et_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_orange_color"
            android:text="0원"
            app:layout_constraintTop_toBottomOf="@id/tv_cash_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_request_convert"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/dialog_convert_request"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/border_request_convert"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_request_convert"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
